do not additionally report not-found imports as undefined variables

BUG:316901